<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FA9F1A"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/textViewTitle"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewprueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#F44336"
            android:entries="@array/Spinner_categories"
            android:textColor="#FFFFFF"
            android:tooltipText="Elige el tipo de plan que quieres" />

        <ScrollView
            android:id="@+id/scrollViewPlans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_templodelsol"
                    android:onClick="buttonInfoPlan1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CD000000"
                        android:contentDescription="@string/img"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/logo_templodelsol" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_telepizza"
                    android:onClick="buttonInfoPlan2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan2"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CCF40000"
                        android:contentDescription="@string/img"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/logo_telepizza" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_nuova"
                    android:onClick="buttonInfoPlan3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan3"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CCFFFFFF"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_nuova" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_vega"
                    android:onClick="buttonInfoPlan4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan4"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CD222222"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_vega" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_forchettone"
                    android:onClick="buttonInfoPlan5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan5"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CDC6AB5C"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_forchettone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_cabalito"
                    android:onClick="buttonInfoPlan6"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan6"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CD000000"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_cabalito" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_hongkong"
                    android:onClick="buttonInfoPlan7"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan7"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CCF40000"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_hongkong" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/background_blur_asador"
                    android:onClick="buttonInfoPlan8"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPlan8"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#CDFFFFFF"
                        android:contentDescription="@string/img"
                        app:srcCompat="@drawable/logo_asador" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/img"
        android:onClick="openDBManager"
        android:scaleType="centerInside"
        android:tint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backup_black_18dp" />

    <TextView
        android:id="@+id/textViewPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission"
        android:textColor="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>